# any_tools

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  cmd_tools.cpp  cmd_tools.h  subcommands.c
.github/workflows/: cmake-single-platform.yml
lib/: CMakeLists.txt
src/: CMakeLists.txt  CMakelists.txt
src/net/: netinfo.c  netinfo.h
src/upgrade/: upgrade.c  upgrade.h
test/: CMakeLists.txt  test_info.cpp  tmain.cpp
